# Ray2

./: CMakeLists.txt  main.cpp
manyslice/: CTMAASPECTCT_H_1001_CT001.dcm  CTMAASPECTCT_H_1001_CT002.dcm  CTMAASPECTCT_H_1001_CT003.dcm  CTMAASPECTCT_H_1001_CT004.dcm  CTMAASPECTCT_H_1001_CT005.dcm  CTMAASPECTCT_H_1001_CT006.dcm  CTMAASPECTCT_H_1001_CT007.dcm  CTMAASPECTCT_H_1001_CT008.dcm  CTMAASPECTCT_H_1001_CT009.dcm  CTMAASPECTCT_H_1001_CT010.dcm  CTMAASPECTCT_H_1001_CT011.dcm  CTMAASPECTCT_H_1001_CT012.dcm  CTMAASPECTCT_H_1001_CT013.dcm  CTMAASPECTCT_H_1001_CT014.dcm  CTMAASPECTCT_H_1001_CT015.dcm  CTMAASPECTCT_H_1001_CT016.dcm  CTMAASPECTCT_H_1001_CT017.dcm  CTMAASPECTCT_H_1001_CT018.dcm  CTMAASPECTCT_H_1001_CT019.dcm  CTMAASPECTCT_H_1001_CT020.dcm  CTMAASPECTCT_H_1001_CT021.dcm  CTMAASPECTCT_H_1001_CT022.dcm  CTMAASPECTCT_H_1001_CT023.dcm  CTMAASPECTCT_H_1001_CT024.dcm  CTMAASPECTCT_H_1001_CT025.dcm  CTMAASPECTCT_H_1001_CT026.dcm  CTMAASPECTCT_H_1001_CT027.dcm  CTMAASPECTCT_H_1001_CT028.dcm  CTMAASPECTCT_H_1001_CT029.dcm  CTMAASPECTCT_H_1001_CT030.dcm  CTMAASPECTCT_H_1001_CT031.dcm  CTMAASPECTCT_H_1001_CT032.dcm  CTMAASPECTCT_H_1001_CT033.dcm  CTMAASPECTCT_H_1001_CT034.dcm  CTMAASPECTCT_H_1001_CT035.dcm  CTMAASPECTCT_H_1001_CT036.dcm  CTMAASPECTCT_H_1001_CT037.dcm  CTMAASPECTCT_H_1001_CT038.dcm  CTMAASPECTCT_H_1001_CT039.dcm  CTMAASPECTCT_H_1001_CT040.dcm  (+121 more)
